ci: add GitHub Actions workflow for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>glowtrips</title>
+    <title>GlowTrips — Curated Vietnam, Bali & Thailand Travel Packages</title>
+    <meta name="description" content="Discover Southeast Asia with personalized trip planning. Explore our curated Vietnam, Bali & Thailand packages. WhatsApp us to start your journey!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="GlowTrips — Curated Vietnam, Bali & Thailand Travel Packages" />
+    <meta property="og:description" content="Discover Southeast Asia with personalized trip planning. Explore our curated Vietnam, Bali & Thailand packages. WhatsApp us to start your journey!" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1528127269322-539801943592?w=1200&h=630&fit=crop&auto=format&q=80" />
+    <meta property="og:url" content="https://disolaterx.github.io/glowtrips/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='40' fill='%23F59E0B'/><circle cx='50' cy='50' r='28' fill='%23FBBF24'/><circle cx='50' cy='50' r='14' fill='%23FDE68A'/></svg>" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
